--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
 
     <div id="video-list">
         <div id="local-user">
-            <video autoplay></video>
+            <video muted="true" autoplay></video>
         </div>
     </div>
 
