Migrate from TypeScript to ES6

--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -48,7 +48,6 @@
 </section>
 
 <script type="text/javascript" src="//code.jquery.com/jquery-2.0.3.js"></script>
-<script type="text/javascript" src="join.js"></script>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="/static/bundle.js"></script>
 </body>
 </html>
